--- a/templates/login.html
+++ b/templates/login.html
@@ -3,37 +3,39 @@
 <div class="container">
     <div class="card">
         <div class="card-header">
-            Login
+            <h2>Login</h2>
         </div>
         <div class="card-body">
-
             {% if msg %}
-            {% if msg == 'Logout Successful' or msg == 'User successfully created' %}
-            <div class="alert alert-success" role="alert">
-                {{msg}}
-            </div>
-            {% else %}
-            <div class="alert alert-danger" role="alert">
-                {{msg}}
-            </div>
+                {% if msg == 'Logout Successful' or msg == 'User successfully created' %}
+                    <div class="alert alert-success" role="alert">
+                        {{ msg }}
+                    </div>
+                {% else %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ msg }}
+                    </div>
+                {% endif %}
             {% endif %}
-            {% endif %}
-
             <form method="POST" action="/auth">
                 <div class="form-group">
-                    <label>Username</label>
-                    <input type="text" class="form-control"
-                           name="email" required>
+                    <label for="email">Email</label>
+                    <input type="email" class="form-control" id="email" name="email" required>
                 </div>
                 <div class="form-group">
-                    <label>Password</label>
-                    <input type="password" class="form-control" name="password" required>
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" id="password" name="password" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Login</button>
             </form>
         </div>
-        <div class="card-footer text-muted">
-            <a href="/auth/register"> Register? </a>
+        <div class="card-footer text-muted d-flex justify-content-between">
+            <div>
+                <a href="/auth/register">Don't have an account?</a>
+            </div>
+            <div>
+                <a href="/auth/forgot-password">Forgot Password?</a>
+            </div>
         </div>
     </div>
 </div>
