--- a/templates/login.html
+++ b/templates/login.html
@@ -19,8 +19,8 @@
             {% endif %}
             <form method="POST" action="/auth">
                 <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" required>
+                    <label for="email">Username</label>
+                    <input type="text" class="form-control" id="email" name="email" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
